python-hildon (0.8.8-1osso8) unstable; urgency=low

  * Adding python2.5-osso as dependency (hildonhelp depends on it).

 -- Lauro Moura Maranhao Neto <lauromoura@gmail.com>  Fri,  4 Jan 2008 13:47:49 -0300

python-hildon (0.8.8-1osso7) unstable; urgency=low

  * hildon.override: Removing comment from hildon.Caption constructor that was avoiding the
    override. 

 -- Lauro Moura Maranhao Neto <lauro.neto@openbossa.org>  Thu,  3 Jan 2008 18:02:08 -0300

python-hildon (0.8.8-1osso6) unstable; urgency=low

  * Fixes #1565 - Adding hildon-help bindings (module hildonhelp).

 -- Lauro Moura Maranhao Neto <lauro.neto@openbossa.org>  Mon, 10 Dec 2007 16:20:12 -0300

python-hildon (0.8.8-1osso5) unstable; urgency=low

  * Fixing #1724 - use pygtk's TemplateExtension when building

 -- Lauro Moura Maranhao Neto <lauro.neto@openbossa.org>  Thu,  6 Dec 2007 16:54:12 -0300

python-hildon (0.8.8-1osso4) unstable; urgency=low

  * Fixing #1720 - adding hildon keysyms (hildon.KEY_*)

 -- Lauro Moura Maranhao Neto <lauro.neto@openbossa.org>  Tue,  4 Dec 2007 16:49:06 -0300

python-hildon (0.8.8-1osso3) unstable; urgency=low

  * Fixing #1195 - hildon.ColorButton.get_color() and adding example. 

 -- Lauro Moura Neto <lauro.neto@openbossa.org>  Fri, 26 Oct 2007 17:38:41 -0300

python-hildon (0.8.8-1osso2) unstable; urgency=low

  * Exporting enumerations (constants).

 -- Luciano Miguel Wolf <luciano.wolf@indt.org.br>  Mon, 22 Oct 2007 15:20:11 -0300

python-hildon (0.8.8-1osso1) unstable; urgency=low

  * added cairo and new gtk version

 -- Luciano Miguel Wolf <luciano.wolf@indt.org.br>  Wed, 30 May 2007 15:38:03 -0300

python-hildon (0.8.7-1osso3) unstable; urgency=low

  * allow NULL parent window to HildonWizardDialog

 -- Luciano Miguel Wolf <luciano.wolf@indt.org.br>  Tue,  8 May 2007 11:01:49 -0300

python-hildon (0.8.7-1osso2) unstable; urgency=low

  * python2.5-gtk2-dev dependency added to the dev package (#775) 
